app/src/main/java/com/visualtasker/wss/emscript/parser/EmscriptParserSlice.kt
package com.visualtasker.wss.emscript.parser

import de.visualtasker.blockeditor.registry.VisualTaskerCommandCatalog
import de.visualtasker.blockeditor.registry.CommandCatalogKind
import de.visualtasker.blockeditor.registry.canBeUsedAsExpression
import de.visualtasker.blockeditor.registry.CommandArgument
import de.visualtasker.blockeditor.registry.CommandArgumentType
import de.visualtasker.blockeditor.registry.CommandCatalogEntry
import de.visualtasker.blockeditor.registry.argumentAt
import de.visualtasker.blockeditor.registry.maximumArgumentCount
import de.visualtasker.blockeditor.registry.minimumArgumentCount
import de.visualtasker.emscript.contract.EmscriptV1OperatorIds
import de.visualtasker.emscript.contract.EmscriptV1Operators
import de.visualtasker.emscript.contract.LanguageTypeCompatibility
import de.visualtasker.emscript.contract.LanguageTypeRef
import de.visualtasker.emscript.contract.OperatorId

data class EmscriptParseIssue(
    val line: Int,
    val column: Int,
    val message: String,
)

data class EmscriptParseResult(
    val ir: EmscriptIrScript?,
    val issues: List<EmscriptParseIssue>,
) {
    val isSuccess: Boolean
        get() = ir != null && issues.isEmpty()
}

data class EmscriptIrScript(
    val statements: List<EmscriptIrStatement>,
)

data class EmscriptSourceSpan(
    val startLine: Int,
    val startColumn: Int,
    val endLine: Int = startLine,
    val endColumn: Int = startColumn,
)

sealed interface EmscriptIrStatement {
    data class CommandCall(
        val command: String,
        val arguments: String,
        val expressionArguments: List<EmscriptIrExpression> = emptyList(),
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Let(
        val variable: String,
        val value: EmscriptIrExpression,
        val declaredType: LanguageTypeRef? = null,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Set(
        val variable: String,
        val value: EmscriptIrExpression,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Wait(
        val milliseconds: EmscriptIrExpression,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class ClickText(
        val text: String,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Output(
        val value: EmscriptIrExpression,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Beep(
        val frequency: Int? = null,
        val durationMs: Int? = null,
        val volume: Int? = null,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Vibrate(
        val pattern: List<Long>,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class Loop(
        val times: EmscriptIrExpression,
        val body: List<EmscriptIrStatement>,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class While(
        val condition: EmscriptIrExpression,
        val body: List<EmscriptIrStatement>,
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement

    data class If(
        val condition: EmscriptIrExpression,
        val thenBranch: List<EmscriptIrStatement>,
        val elseIfBranches: List<EmscriptElseIfBranch> = emptyList(),
        val elseBranch: List<EmscriptIrStatement> = emptyList(),
        val source: EmscriptSourceSpan? = null,
    ) : EmscriptIrStatement
}

data class EmscriptElseIfBranch(
    val condition: EmscriptIrExpression,
    val body: List<EmscriptIrStatement>,
    val source: EmscriptSourceSpan? = null,
)

sealed interface EmscriptIrExpression {
    data class VariableRef(val name: String) : EmscriptIrExpression
    data class NumberLiteral(val value: Double, val raw: String) : EmscriptIrExpression
    data class StringLiteral(val value: String) : EmscriptIrExpression
    data class BooleanLiteral(val value: Boolean) : EmscriptIrExpression
    data class FunctionCall(
        val name: String,
        val arguments: List<EmscriptIrExpression>,
    ) : EmscriptIrExpression

    data class Binary(
        val left: EmscriptIrExpression,
        val op: EmscriptBinaryOp,
        val right: EmscriptIrExpression,
    ) : EmscriptIrExpression
}

enum class EmscriptBinaryOp(val operatorId: OperatorId) {
    OR(EmscriptV1OperatorIds.OR),
    AND(EmscriptV1OperatorIds.AND),
    ADD(EmscriptV1OperatorIds.ADD),
    SUB(EmscriptV1OperatorIds.SUBTRACT),
    MUL(EmscriptV1OperatorIds.MULTIPLY),
    DIV(EmscriptV1OperatorIds.DIVIDE),
    MOD(EmscriptV1OperatorIds.MODULO),
    EQ(EmscriptV1OperatorIds.EQUAL),
    NEQ(EmscriptV1OperatorIds.NOT_EQUAL),
    LT(EmscriptV1OperatorIds.LESS),
    LTE(EmscriptV1OperatorIds.LESS_OR_EQUAL),
    GT(EmscriptV1OperatorIds.GREATER),
    GTE(EmscriptV1OperatorIds.GREATER_OR_EQUAL),
    ;

    val canonicalSymbol: String
        get() = EmscriptV1Operators.requireDefinition(operatorId).symbol
}

class EmscriptParserSlice(
    private val includeSourceSpans: Boolean = false,
) {
    fun parse(script: String): EmscriptParseResult {
        return runCatching {
            val lexer = Lexer(script)
            val tokens = lexer.lex()
            val parser = Parser(tokens, includeSourceSpans)
            EmscriptParseResult(
                ir = EmscriptIrScript(parser.parseStatements(untilBoundary = false)),
                issues = emptyList(),
            )
        }.getOrElse { error ->
            val failure = (error as? ParseException) ?: ParseException(
                line = 1,
                column = 1,
                message = error.message ?: "Unbekannter Parserfehler",
            )
            EmscriptParseResult(
                ir = null,
                issues = listOf(
                    EmscriptParseIssue(
                        line = failure.line,
                        column = failure.column,
                        message = failure.message,
                    ),
                ),
            )
        }
    }
}

private data class Token(
    val type: TokenType,
    val lexeme: String,
    val line: Int,
    val column: Int,
)

private enum class TokenType {
    IDENT,
    NUMBER,
    STRING,
    TRUE,
    FALSE,
    LET,
    SET,
    IF,
    ELSEIF,
    ELSE,
    LOOP,
    WHILE,
    END,
    ASSIGN,
    COMMA,
    DOT,
    COLON,
    QUESTION,
    PLUS,
    MINUS,
    STAR,
    SLASH,
    PERCENT,
    EQEQ,
    NEQ,
    LT,
    LTE,
    GT,
    GTE,
    LPAREN,
    RPAREN,
    LBRACE,
    RBRACE,
    LBRACKET,
    RBRACKET,
    SEMICOLON,
    ANDAND,
    OROR,
    NEWLINE,
    EOF,
}

private class Lexer(private val source: String) {
    private var index: Int = 0
    private var line: Int = 1
    private var column: Int = 1
    private val tokens = mutableListOf<Token>()

    fun lex(): List<Token> {
        while (!isAtEnd()) {
            when (val ch = peek()) {
                ' ', '\t', '\r' -> advance()
                '\n' -> {
                    tokens += token(TokenType.NEWLINE, "\n")
                    advanceLine()
                }
                '/' -> {
                    if (peekNext() == '/') {
                        skipComment()
                    } else {
                        tokens += token(TokenType.SLASH, "/")
                        advance()
                    }
                }
                '+' -> {
                    tokens += token(TokenType.PLUS, "+")
                    advance()
                }
                '-' -> {
                    tokens += token(TokenType.MINUS, "-")
                    advance()
                }
                '*' -> {
                    tokens += token(TokenType.STAR, "*")
                    advance()
                }
                '%' -> {
                    tokens += token(TokenType.PERCENT, "%")
                    advance()
                }
                '(' -> {
                    tokens += token(TokenType.LPAREN, "(")
                    advance()
                }
                ')' -> {
                    tokens += token(TokenType.RPAREN, ")")
                    advance()
                }
                '{' -> {
                    tokens += token(TokenType.LBRACE, "{")
                    advance()
                }
                '}' -> {
                    tokens += token(TokenType.RBRACE, "}")
                    advance()
                }
                '[' -> {
                    tokens += token(TokenType.LBRACKET, "[")
                    advance()
                }
                ']' -> {
                    tokens += token(TokenType.RBRACKET, "]")
                    advance()
                }
                ';' -> {
                    tokens += token(TokenType.SEMICOLON, ";")
                    advance()
                }
                '&' -> {
                    if (peekNext() == '&') {
                        tokens += token(TokenType.ANDAND, "&&")
                        advance()
                        advance()
                    } else {
                        throw ParseException(line, column, "Unerwartetes Zeichen '&'.")
                    }
                }
                '|' -> {
                    if (peekNext() == '|') {
                        tokens += token(TokenType.OROR, "||")
                        advance()
                        advance()
                    } else {
                        throw ParseException(line, column, "Unerwartetes Zeichen '|'.")
                    }
                }
                ',' -> {
                    tokens += token(TokenType.COMMA, ",")
                    advance()
                }
                '.' -> {
                    tokens += token(TokenType.DOT, ".")
                    advance()
                }
                ':' -> {
                    tokens += token(TokenType.COLON, ":")
                    advance()
                }
                '?' -> {
                    tokens += token(TokenType.QUESTION, "?")
                    advance()
                }
                '=' -> {
                    if (peekNext() == '=') {
                        tokens += token(TokenType.EQEQ, "==")
                        advance()
                        advance()
                    } else {
                        tokens += token(TokenType.ASSIGN, "=")
                        advance()
                    }
                }
                '!' -> {
                    if (peekNext() == '=') {
                        tokens += token(TokenType.NEQ, "!=")
                        advance()
                        advance()
                    } else {
                        throw ParseException(line, column, "Unerwartetes Zeichen '!'.")
                    }
                }
                '<' -> {
                    if (peekNext() == '=') {
                        tokens += token(TokenType.LTE, "<=")
                        advance()
                        advance()
                    } else {
                        tokens += token(TokenType.LT, "<")
                        advance()
                    }
                }
                '>' -> {
                    if (peekNext() == '=') {
                        tokens += token(TokenType.GTE, ">=")
                        advance()
                        advance()
                    } else {
                        tokens += token(TokenType.GT, ">")
                        advance()
                    }
                }
                '"' -> lexString()
                else -> when {
                    ch.isDigit() -> lexNumber()
                    ch.isLetter() || ch == '_' -> lexIdentifier()
                    else -> throw ParseException(line, column, "Unerwartetes Zeichen '$ch'.")
                }
            }
        }
        tokens += Token(TokenType.EOF, "", line, column)
        return tokens
    }

    private fun lexString() {
        val startLine = line
        val startColumn = column
        advance()
        val builder = StringBuilder()
        while (!isAtEnd() && peek() != '"') {
            val ch = peek()
            if (ch == '\n') {
                throw ParseException(startLine, startColumn, "String-Literal darf keine neue Zeile enthalten.")
            }
            if (ch == '\\') {
                advance()
                if (isAtEnd()) {
                    throw ParseException(startLine, startColumn, "Unterminierte Escape-Sequenz im String-Literal.")
                }
                val escaped = when (val next = peek()) {
                    '"' -> '"'
                    '\\' -> '\\'
                    'n' -> '\n'
                    'r' -> '\r'
                    't' -> '\t'
                    else -> next
                }
                builder.append(escaped)
                advance()
            } else {
                builder.append(ch)
                advance()
            }
        }
        if (isAtEnd()) {
            throw ParseException(startLine, startColumn, "Unterminiertes String-Literal.")
        }
        advance()
        tokens += Token(TokenType.STRING, builder.toString(), startLine, startColumn)
    }

    private fun lexNumber() {
        val startLine = line
        val startColumn = column
        val builder = StringBuilder()
        while (!isAtEnd() && peek().isDigit()) {
            builder.append(peek())
            advance()
        }
        if (!isAtEnd() && peek() == '.') {
            builder.append('.')
            advance()
            while (!isAtEnd() && peek().isDigit()) {
                builder.append(peek())
                advance()
            }
        }
        tokens += Token(TokenType.NUMBER, builder.toString(), startLine, startColumn)
    }

    private fun lexIdentifier() {
        val startLine = line
        val startColumn = column
        val builder = StringBuilder()
        while (!isAtEnd() && (peek().isLetterOrDigit() || peek() == '_')) {
            builder.append(peek())
            advance()
        }
        val raw = builder.toString()
        val upper = raw.uppercase()
        if (upper == "REM" && peek() != '.') {
            skipComment()
            return
        }
        val type = when (upper) {
            "LET" -> TokenType.LET
            "SET" -> TokenType.SET
            "IF" -> TokenType.IF
            "ELSEIF" -> TokenType.ELSEIF
            "ELSE" -> TokenType.ELSE
            "LOOP" -> TokenType.LOOP
            "REPEAT" -> TokenType.LOOP
            "WHILE" -> TokenType.WHILE
            "END" -> TokenType.END
            "TRUE" -> TokenType.TRUE
            "FALSE" -> TokenType.FALSE
            else -> TokenType.IDENT
        }
        tokens += Token(type, raw, startLine, startColumn)
    }

    private fun skipComment() {
        while (!isAtEnd() && peek() != '\n') {
            advance()
        }
    }

    private fun token(type: TokenType, lexeme: String): Token = Token(type, lexeme, line, column)

    private fun isAtEnd(): Boolean = index >= source.length

    private fun peek(): Char = source[index]

    private fun peekNext(): Char? = source.getOrNull(index + 1)

    private fun advance() {
        if (isAtEnd()) return
        index += 1
        column += 1
    }

    private fun advanceLine() {
        index += 1
        line += 1
        column = 1
    }
}

private class Parser(
    private val tokens: List<Token>,
    private val includeSourceSpans: Boolean,
) {
    private var current: Int = 0

    fun parseStatements(untilBoundary: Boolean): List<EmscriptIrStatement> {
        val statements = mutableListOf<EmscriptIrStatement>()
        skipSeparators()
        while (!isAtEnd()) {
            if (untilBoundary && isBlockBoundary()) break
            statements += parseStatement()
            skipSeparators()
        }
        return statements
    }

    private fun parseStatement(): EmscriptIrStatement {
        return when {
            match(TokenType.LET) -> parseLet(previous())
            match(TokenType.SET) -> parseSet(previous())
            match(TokenType.IF) -> parseIf(previous())
            match(TokenType.LOOP) -> parseLoop(previous())
            match(TokenType.WHILE) -> parseWhile(previous())
            match(TokenType.IDENT) -> {
                val start = previous()
                parseCommandStatement(parseQualifiedIdentifier(start)).withSource(start.sourceSpanOrNull())
            }
            else -> {
                val token = peek()
                throw ParseException(token.line, token.column, "Unerwartetes Token '${token.lexeme}'.")
            }
        }
    }

    private fun parseLet(start: Token): EmscriptIrStatement.Let {
        val variable = consume(TokenType.IDENT, "Variablenname nach LET erwartet.")
        val declaredType = if (match(TokenType.COLON)) parseTypeReference() else null
        consume(TokenType.ASSIGN, "'=' nach Variablenname erwartet.")
        val value = parseExpression()
        return EmscriptIrStatement.Let(
            variable = variable.lexeme,
            value = value,
            declaredType = declaredType,
            source = start.sourceSpanOrNull(),
        )
    }

    private fun parseTypeReference(): LanguageTypeRef {
        val type = consume(TokenType.IDENT, "Typname nach ':' erwartet.")
        val baseType = if (type.lexeme.equals("List", ignoreCase = true) && match(TokenType.LT)) {
            val elementType = parseTypeReference()
            consume(TokenType.GT, "'>' nach List-Elementtyp erwartet.")
            LanguageTypeRef.ListOf(elementType)
        } else {
            requireNotNull(LanguageTypeCompatibility.fromWorkspaceName(type.lexeme)) {
                "Unbekannter Typ '${type.lexeme}'."
            }
        }
        return if (match(TokenType.QUESTION)) LanguageTypeRef.Nullable(baseType) else baseType
    }

    private fun parseSet(start: Token): EmscriptIrStatement.Set {
        val variable = consume(TokenType.IDENT, "Variablenname nach SET erwartet.")
        consume(TokenType.ASSIGN, "'=' nach Variablenname erwartet.")
        val value = parseExpression()
        return EmscriptIrStatement.Set(variable.lexeme, value, source = start.sourceSpanOrNull())
    }

    private fun parseIf(start: Token): EmscriptIrStatement.If {
        val condition = parseExpression()
        val braceBlock = match(TokenType.LBRACE)
        skipSeparators()
        val thenBranch = parseStatements(untilBoundary = true)
        if (braceBlock) {
            consume(TokenType.RBRACE, "'}' zum Schließen von if-Zweig erwartet.")
        }
        val elseIfBranches = mutableListOf<EmscriptElseIfBranch>()
        var elseBranch = emptyList<EmscriptIrStatement>()
        while (matchElseIf()) {
            val elseIfStart = previous()
            val elseIfCondition = parseExpression()
            val elseIfBraceBlock = match(TokenType.LBRACE)
            skipSeparators()
            elseIfBranches += EmscriptElseIfBranch(
                condition = elseIfCondition,
                body = parseStatements(untilBoundary = true),
                source = elseIfStart.sourceSpanOrNull(),
            )
            if (elseIfBraceBlock) {
                consume(TokenType.RBRACE, "'}' zum Schließen von else-if-Zweig erwartet.")
            }
        }
        if (match(TokenType.ELSE)) {
            val elseBraceBlock = match(TokenType.LBRACE)
            skipSeparators()
            elseBranch = parseStatements(untilBoundary = true)
            if (elseBraceBlock) {
                consume(TokenType.RBRACE, "'}' zum Schließen von else-Zweig erwartet.")
            }
        }
        if (!braceBlock) {
            consume(TokenType.END, "END zum Schließen von IF erwartet.")
            consume(TokenType.IF, "IF nach END erwartet.")
        }
        return EmscriptIrStatement.If(
            condition = condition,
            thenBranch = thenBranch,
            elseIfBranches = elseIfBranches,
            elseBranch = elseBranch,
            source = start.sourceSpanOrNull(),
        )
    }

    private fun parseLoop(start: Token): EmscriptIrStatement.Loop {
        val times = parseExpression()
        val braceBlock = match(TokenType.LBRACE)
        skipSeparators()
        val body = parseStatements(untilBoundary = true)
        if (braceBlock) {
            consume(TokenType.RBRACE, "'}' zum Schließen von repeat-Zweig erwartet.")
        } else {
            consume(TokenType.END, "END zum Schließen von LOOP erwartet.")
            consume(TokenType.LOOP, "LOOP nach END erwartet.")
        }
        return EmscriptIrStatement.Loop(times = times, body = body, source = start.sourceSpanOrNull())
    }

    private fun parseWhile(start: Token): EmscriptIrStatement.While {
        val condition = parseExpression()
        val braceBlock = match(TokenType.LBRACE)
        skipSeparators()
        val body = parseStatements(untilBoundary = true)
        if (braceBlock) {
            consume(TokenType.RBRACE, "'}' zum Schließen von while-Zweig erwartet.")
        } else {
            consume(TokenType.END, "END zum Schließen von WHILE erwartet.")
            consume(TokenType.WHILE, "WHILE nach END erwartet.")
        }
        return EmscriptIrStatement.While(condition = condition, body = body, source = start.sourceSpanOrNull())
    }

    private fun parseQualifiedIdentifier(first: Token): Token {
        var lexeme = first.lexeme
        while (match(TokenType.DOT)) {
            val part = consumeIdentifierPart("Identifier nach '.' erwartet.")
            lexeme += ".${part.lexeme}"
        }
        return first.copy(lexeme = lexeme)
    }

    private fun parseCommandStatement(command: Token): EmscriptIrStatement {
        return when (command.lexeme.uppercase()) {
            "WAIT" -> if (check(TokenType.LPAREN)) parseWaitFunction(command) else EmscriptIrStatement.Wait(parseExpression())
            "CLICK" -> if (check(TokenType.LPAREN)) parseClickFunction(command) else {
                EmscriptIrStatement.ClickText(consume(TokenType.STRING, "CLICK erwartet Text-String.").lexeme)
            }
            "OUTPUT" -> if (check(TokenType.LPAREN)) parseLogFunction(command) else EmscriptIrStatement.Output(parseExpression())
            "LOG" -> parseLogFunction(command)
            "BEEP" -> if (check(TokenType.LPAREN)) parseBeepFunction(command) else parseLegacyBeep()
            else -> parseFunctionCommand(command)
        }
    }

    private fun parseFunctionCommand(command: Token): EmscriptIrStatement {
        return when (command.lexeme.lowercase()) {
            "wait" -> parseWaitFunction(command)
            "click" -> parseClickFunction(command)
            "log" -> parseLogFunction(command)
            "beep" -> parseBeepFunction(command)
            else -> {
                val catalogEntry = VisualTaskerCommandCatalog.findLanguageCommandByAcceptedName(command.lexeme)
                if (catalogEntry != null) {
                    val args = parseRawFunctionArguments(command)
                    val expressionTransport = catalogEntry.arguments
                        .filter { it.type != CommandArgumentType.STATEMENT_BODY }
                        .takeIf { it.isNotEmpty() && it.all { argument -> argument.acceptedTypes.isNotEmpty() } }
                    validateCatalogArguments(
                        command = command,
                        entry = catalogEntry,
                        arguments = args.arguments,
                        validatePrimitiveTypes = expressionTransport == null,
                    )
                    val expressionArguments = expressionTransport
                        ?.let { args.arguments.map { raw -> parseStandaloneExpression(raw, command) } }
                        .orEmpty()
                    return EmscriptIrStatement.CommandCall(
                        command = catalogEntry.canonicalName,
                        arguments = args.rendered,
                        expressionArguments = expressionArguments,
                    )
                }
                throw ParseException(command.line, command.column, "Unbekanntes Kommando '${command.lexeme}'.")
            }
        }
    }

    private fun parseRawFunctionArguments(command: Token): RawFunctionArguments {
        consume(TokenType.LPAREN, "'(' nach ${command.lexeme} erwartet.")
        val args = mutableListOf<String>()
        val currentArg = mutableListOf<String>()
        var parenDepth = 0
        var bracketDepth = 0
        var braceDepth = 0
        while (!check(TokenType.EOF)) {
            if (check(TokenType.RPAREN) && parenDepth == 0 && bracketDepth == 0 && braceDepth == 0) break
            val token = advance()
            when (token.type) {
                TokenType.LPAREN -> {
                    parenDepth += 1
                    currentArg += token.lexeme
                }
                TokenType.RPAREN -> {
                    parenDepth -= 1
                    currentArg += token.lexeme
                }
                TokenType.LBRACKET -> {
                    bracketDepth += 1
                    currentArg += token.lexeme
                }
                TokenType.RBRACKET -> {
                    bracketDepth -= 1
                    currentArg += token.lexeme
                }
                TokenType.LBRACE -> {
                    braceDepth += 1
                    currentArg += token.lexeme
                }
                TokenType.RBRACE -> {
                    braceDepth -= 1
                    currentArg += token.lexeme
                }
                TokenType.COMMA -> {
                    if (parenDepth == 0 && bracketDepth == 0 && braceDepth == 0) {
                        args += currentArg.joinToString(separator = "").trim()
                        currentArg.clear()
                    } else {
                        currentArg += token.lexeme
                    }
                }
                TokenType.STRING -> currentArg += "\"${token.lexeme.escapeEmscriptString()}\""
                TokenType.NEWLINE -> currentArg += " "
                else -> currentArg += token.lexeme
            }
            if (parenDepth < 0 || bracketDepth < 0 || braceDepth < 0) {
                throw ParseException(token.line, token.column, "Unausgeglichene Klammern in ${command.lexeme}-Parametern.")
            }
        }
        consume(TokenType.RPAREN, "')' nach ${command.lexeme}-Parametern erwartet.")
        val trailing = currentArg.joinToString(separator = "").trim()
        if (trailing.isNotEmpty() || args.isNotEmpty()) {
            args += trailing
        }
        return RawFunctionArguments(args.joinToString(","), args)
    }

    private fun validateCatalogArguments(
        command: Token,
        entry: CommandCatalogEntry,
        arguments: List<String>,
        validatePrimitiveTypes: Boolean = true,
    ) {
        val required = entry.minimumArgumentCount()
        if (arguments.size < required) {
            throw ParseException(command.line, command.column, "${entry.canonicalName} erwartet mindestens $required Parameter.")
        }
        val maximum = entry.maximumArgumentCount()
        if (maximum != null && arguments.size > maximum) {
            throw ParseException(command.line, command.column, "${entry.canonicalName} unterstützt maximal $maximum Parameter.")
        }
        if (validatePrimitiveTypes) {
            arguments.forEachIndexed { index, raw ->
                val spec = requireNotNull(entry.argumentAt(index))
                validateRawArgument(command, entry, spec, index + 1, raw)
            }
        }
    }

    private fun parseStandaloneExpression(raw: String, command: Token): EmscriptIrExpression =
        runCatching {
            Parser(Lexer(raw).lex(), includeSourceSpans = false).parseStandaloneExpression()
        }.getOrElse { error ->
            val detail = (error as? ParseException)?.message ?: error.message ?: "ungueltiger Ausdruck"
            throw ParseException(command.line, command.column, "${command.lexeme}: $detail")
        }

    private fun parseStandaloneExpression(): EmscriptIrExpression {
        val expression = parseExpression()
        skipSeparators()
        consume(TokenType.EOF, "Unerwarteter Inhalt nach Command-Argument.")
        return expression
    }

    private fun validateRawArgument(
        command: Token,
        entry: CommandCatalogEntry,
        spec: CommandArgument,
        position: Int,
        raw: String,
    ) {
        val trimmed = raw.trim()
        val valid = when (spec.type) {
            CommandArgumentType.ANY -> trimmed.isNotEmpty()
            CommandArgumentType.BOOLEAN -> trimmed.equals("true", ignoreCase = true) ||
                trimmed.equals("false", ignoreCase = true)
            CommandArgumentType.NUMBER,
            CommandArgumentType.DURATION_MS,
            CommandArgumentType.FREQUENCY_HZ,
            CommandArgumentType.PERCENT,
            -> trimmed.matches(numberArgumentRegex)
            CommandArgumentType.TEXT,
            CommandArgumentType.IMAGE_TEMPLATE,
            -> trimmed.isQuotedString()
            CommandArgumentType.REGION -> trimmed.isQuotedString() || trimmed.isRegionFunctionArgument()
            CommandArgumentType.VARIABLE_REF -> trimmed.isIdentifierLike() || trimmed.isQuotedString()
            CommandArgumentType.STATEMENT_BODY -> true
        }
        if (!valid) {
            throw ParseException(
                command.line,
                command.column,
                "${entry.canonicalName} Parameter $position '${spec.name}' erwartet ${spec.type.name}, erhalten: $trimmed",
            )
        }
    }

    private fun parseWaitFunction(command: Token): EmscriptIrStatement.Wait {
        val args = parseIntegerFunctionArguments(command, min = 1, max = 1)
        return EmscriptIrStatement.Wait(EmscriptIrExpression.NumberLiteral(args.single().toDouble(), args.single().toString()))
    }

    private fun parseClickFunction(command: Token): EmscriptIrStatement.ClickText {
        consume(TokenType.LPAREN, "'(' nach ${command.lexeme} erwartet.")
        val text = consume(TokenType.STRING, "${command.lexeme} erwartet Text-String.").lexeme
        consume(TokenType.RPAREN, "')' nach ${command.lexeme}-Parametern erwartet.")
        return EmscriptIrStatement.ClickText(text)
    }

    private fun parseLogFunction(command: Token): EmscriptIrStatement.Output {
        consume(TokenType.LPAREN, "'(' nach ${command.lexeme} erwartet.")
        val value = parseExpression()
        consume(TokenType.RPAREN, "')' nach ${command.lexeme}-Parametern erwartet.")
        return EmscriptIrStatement.Output(value)
    }

    private fun parseBeepFunction(command: Token): EmscriptIrStatement.Beep {
        val args = parseIntegerFunctionArguments(command, min = 0, max = 3)
        return EmscriptIrStatement.Beep(
            frequency = args.getOrNull(0)?.toInt(),
            durationMs = args.getOrNull(1)?.toInt(),
            volume = args.getOrNull(2)?.toInt(),
        )
    }

    private fun parseLegacyBeep(): EmscriptIrStatement.Beep {
        val args = mutableListOf<Long>()
        while (!check(TokenType.NEWLINE) && !check(TokenType.EOF)) {
            val value = consume(TokenType.NUMBER, "BEEP erwartet numerische Parameter.").lexeme.toLongOrNull()
                ?: throw ParseException(previous().line, previous().column, "BEEP-Parameter muss eine Ganzzahl sein.")
            args += value
            if (args.size > 3) {
                val token = previous()
                throw ParseException(token.line, token.column, "BEEP unterstützt maximal drei Parameter.")
            }
        }
        return EmscriptIrStatement.Beep(
            frequency = args.getOrNull(0)?.toInt(),
            durationMs = args.getOrNull(1)?.toInt(),
            volume = args.getOrNull(2)?.toInt(),
        )
    }

    private fun parseIntegerFunctionArguments(command: Token, min: Int, max: Int): List<Long> {
        consume(TokenType.LPAREN, "'(' nach ${command.lexeme} erwartet.")
        val args = mutableListOf<Long>()
        if (!check(TokenType.RPAREN)) {
            do {
                val token = consume(TokenType.NUMBER, "${command.lexeme} erwartet numerische Parameter.")
                val value = token.lexeme.toLongOrNull()
                    ?: throw ParseException(token.line, token.column, "${command.lexeme}-Parameter muss eine Ganzzahl sein.")
                args += value
                if (args.size > max) {
                    throw ParseException(token.line, token.column, "${command.lexeme} unterstützt maximal $max Parameter.")
                }
            } while (match(TokenType.COMMA))
        }
        consume(TokenType.RPAREN, "')' nach ${command.lexeme}-Parametern erwartet.")
        if (args.size < min) {
            throw ParseException(command.line, command.column, "${command.lexeme} erwartet mindestens $min Parameter.")
        }
        return args
    }

    private fun parseExpression(): EmscriptIrExpression = parseLogicalOr()

    private fun parseLogicalOr(): EmscriptIrExpression {
        var expr = parseLogicalAnd()
        while (match(TokenType.OROR)) {
            val right = parseLogicalAnd()
            expr = EmscriptIrExpression.Binary(expr, EmscriptBinaryOp.OR, right)
        }
        return expr
    }

    private fun parseLogicalAnd(): EmscriptIrExpression {
        var expr = parseComparison()
        while (match(TokenType.ANDAND)) {
            val right = parseComparison()
            expr = EmscriptIrExpression.Binary(expr, EmscriptBinaryOp.AND, right)
        }
        return expr
    }

    private fun parseComparison(): EmscriptIrExpression {
        var expr = parseAdditive()
        while (true) {
            val operator = when {
                match(TokenType.EQEQ) -> EmscriptBinaryOp.EQ
                match(TokenType.NEQ) -> EmscriptBinaryOp.NEQ
                match(TokenType.LT) -> EmscriptBinaryOp.LT
                match(TokenType.LTE) -> EmscriptBinaryOp.LTE
                match(TokenType.GT) -> EmscriptBinaryOp.GT
                match(TokenType.GTE) -> EmscriptBinaryOp.GTE
                else -> null
            } ?: break
            val right = parseAdditive()
            expr = EmscriptIrExpression.Binary(expr, operator, right)
        }
        return expr
    }

    private fun parseAdditive(): EmscriptIrExpression {
        var expr = parseMultiplicative()
        while (true) {
            val operator = when {
                match(TokenType.PLUS) -> EmscriptBinaryOp.ADD
                match(TokenType.MINUS) -> EmscriptBinaryOp.SUB
                else -> null
            } ?: break
            val right = parseMultiplicative()
            expr = EmscriptIrExpression.Binary(expr, operator, right)
        }
        return expr
    }
